--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="item1">Batik</string>
+    <string name="item2">Brokat</string>
+    <string name="item3">Gorga</string>
+    <string name="item4">Strip</string>
+    <!--Gender-->
+    <string name="gender1">Pria</string>
+    <string name="gender2">Wanita</string>
 </resources>
